# Schola

./: .gitignore  LICENSE  README.md  add_user_subject.py  app.py  database.db  db.py  local_ingest.py  local_retrieval.py  pyproject.toml  testing.py
api/: files.py
datasources/: faiss_ds.py  ingest.py
datasources/Project Management/: faiss.index  meta_data.jsonl
datasources/Project_Management/: meta_data.jsonl
datasources/Southeast Asia Economy/: meta_data.jsonl
datasources/Southeast_Asia_Economy/: meta_data.jsonl
datasources/Spanish History/: faiss.index  meta_data.jsonl
datasources/Spanish_History/: meta_data.jsonl
datasources/my_local_datasource/: meta_data.jsonl
db/: db.py  interactions.csv
llms/: openai.py  prompt.py
pipelines/: config_pipeline.py  db.py  default_pipeline.py  handlers.py  qa.py  qa_pipeline.py  quiz.py  quiz_pipeline.py  subject_select_pipeline.py  utils.py
resources/: prompt.py
resources/languages/: en.py
scripts/: api.sh  local_ingest.py  start.sh
tests/: conftest.py  test_db.py  test_interaction_db.py  test_subject_db.py  test_user_db.py
tools/: extraction.py  form_recognizer.py  messenger.py  replicate.py  whisper.py
utils/: add_user_subject.py  const.py  formatter.py  keyboard_markup.py  md_parser.py
