[tool.poetry]
name = "schola"
version = "0.1.0"
description = "Student-Centric Hub for Online Learning Assistant"
authors = ["Reagan <rrr.chanhiulok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.47.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
